<resources>
    <string name="app_name">ScotlandYardLive</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Map</string>
    <string name="zeit">Zeit:</string>
    <string name="gruppe">Gruppe:</string>
    <string name="confirm_button">Ortsmeldung Abgeben!</string>
    <string name="include_location">mit Position melden</string>
    <string name="emptysuggestion">--locate nearest Stations--</string>
    <string name="historie_caption">Historie: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_selection">Wähle ein Team:</string>
    <string name="team_selection_caption">Teamwahl</string>
    <string name="detailview_caption">Historie</string>
</resources>