<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Ortsmeldung"
            android:textAlignment="center"
            android:textSize="@dimen/font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeit"
                android:textSize="@dimen/font_size" />

            <TextClock
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gruppe"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/textViewGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="@dimen/font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Station:"
                android:textSize="@dimen/font_size" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="@dimen/AutoFillText_width"
                android:layout_height="wrap_content"
                android:text="AutoCompleteTextView"
                android:textSize="@dimen/font_size" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Locate"
                android:minWidth="12sp"
                android:src="@android:drawable/ic_menu_mylocation" />

        </LinearLayout>


        <TextView
            android:id="@+id/stationSuggest1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/emptysuggestion"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/stationSuggest2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/emptysuggestion"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/stationSuggest3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/emptysuggestion"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/stationSuggest4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/emptysuggestion"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/stationSuggest5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/emptysuggestion"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Verkehrsmittel:"
            android:textSize="@dimen/font_size" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/r_pic"
                    android:text=""
                    android:textColor="@android:color/transparent" />

                <RadioButton
                    android:id="@+id/radioButtonU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/u_pic"
                    android:text=""
                    android:textColor="@android:color/transparent" />

                <RadioButton
                    android:id="@+id/radioButtonS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/s_pic"
                    android:text=""
                    android:textColor="@android:color/transparent" />


                <RadioButton
                    android:id="@+id/radioButtonT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/t_pic"
                    android:text=""
                    android:textColor="@android:color/transparent" />

                <RadioButton
                    android:id="@+id/radioButtonM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/m_pic"
                    android:text=""
                    android:textColor="@android:color/transparent" />

                <RadioButton
                    android:id="@+id/radioButtonB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/b_pic"
                    android:text=""
                    android:textColor="@android:color/transparent" />
            </TableRow>

        </TableLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/include_location"
            android:textSize="@dimen/font_size" />

        <Button
            android:id="@+id/buttonSendPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button"
            android:textSize="@dimen/font_size"
            />
    </LinearLayout>



    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>